tests/ui/const-generics/early/const-param-from-outer-fn.rs
fn foo<const X: u32>() {
    fn bar() -> u32 {
        X //~ ERROR can't use generic parameters from outer item
    }
}

fn main() {}
